fix vue version in async example

--- a/javalin5/javalin-async-example/src/main/resources/public/index.html
+++ b/javalin5/javalin-async-example/src/main/resources/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Javalin Async Example</title>
-        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.42/css/uikit.min.css">
     </head>
     <body style="max-width:560px;margin:80px auto">
