--- a/javalin5/javalinstagram/src/main/resources/vue/layout.html
+++ b/javalin5/javalinstagram/src/main/resources/vue/layout.html
@@ -8,16 +8,13 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <meta content="telephone=no" name="format-detection">
         <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Roboto:300,400,500,700|Material+Icons" rel="stylesheet">
-        <link href="/webjars/vuetify/1.5.16/dist/vuetify.min.css" rel="stylesheet">
+        <link href="/webjars/vuetify/2.6.7/dist/vuetify.min.css" rel="stylesheet">
         <link rel="preload" href="/logo.png" as="image">
-        <script src="/webjars/momentjs/2.24.0/min/moment.min.js"></script>
-        <script src="/webjars/axios/0.19.0/dist/axios.min.js"></script>
+        <script src="/webjars/momentjs/2.29.3/min/moment.min.js"></script>
+        <script src="/webjars/axios/0.27.2/dist/axios.min.js"></script>
         <script src="/webjars/vue/2.6.10/dist/vue.min.js"></script>
-        <script src="webjars/vuetify/1.5.16/dist/vuetify.min.js"></script>
-        <script>
-            Vue.prototype.$eventBus = new Vue();
-            Object.assign(Vue.prototype.$vuetify.theme, {primary: "#bc50a4"});
-        </script>
+        <script src="webjars/vuetify/2.6.7/dist/vuetify.min.js"></script>
+        <script>Vue.prototype.$eventBus = new Vue();</script>
         @componentRegistration
     </head>
     <body>
@@ -25,7 +22,11 @@
             @routeComponent
         </main>
         <script>
-            new Vue({el: "#main-vue"});
+            const vue = new Vue({
+                el: "#main-vue",
+                vuetify: new Vuetify(),
+            });
+            vue.$vuetify.theme.setTheme("light", {primary: "#bc50a4"});
         </script>
     </body>
 </html>
